Integrated Service Catalog microservice in frontend