@@ -14,12 +14,19 @@ import ro.urhomie.service_catalog.business.dtos.provided_service.*;
 import ro.urhomie.service_catalog.business.utils.helpers.ProvidedServiceSearchHelper;
 import ro.urhomie.service_catalog.business.utils.mappers.ProvidedServiceMapper;
 import ro.urhomie.service_catalog.business.services.interfaces.ProvidedServiceService;
+import ro.urhomie.service_catalog.business.utils.patching.Patchers;
+import ro.urhomie.service_catalog.business.utils.validations.PatchValidator;
 import ro.urhomie.service_catalog.persistence.entities.ProvidedService;
+import ro.urhomie.service_catalog.persistence.entities.ServiceCategory;
 import ro.urhomie.service_catalog.persistence.repositories.ProvidedServiceRepository;
 import ro.urhomie.service_catalog.persistence.repositories.ServiceCategoryRepository;
 import ro.urhomie.service_catalog.presentation.exceptions.InvalidReferenceException;
+import ro.urhomie.service_catalog.presentation.exceptions.MultiValidationException;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,15 +39,28 @@ public class ProvidedServiceServiceImpl implements ProvidedServiceService {
 
     private final ProvidedServiceMapper mapper;
     private final ProvidedServiceSearchHelper searchHelper;
+    private final PatchValidator patchValidator;
+
+    @Override
+    public Optional<ProvidedServiceDto> getServiceById(String serviceId) {
+        return providedServiceRepo.findById(serviceId).map(mapper::entityToDto);
+    }
 
     @Override
     public ProvidedServiceSearchDto getServicesByProviderId(long providerId, int page, int size) {
         Pageable pageable = PageRequest.of(page, size);
         Page<ProvidedService> resultPage = providedServiceRepo.findByProviderId(providerId, pageable);
 
-        return mapper.buildSearchDto(resultPage.getContent(), page, size, resultPage.getTotalElements());
-    }
+        List<String> categoryIds = resultPage.getContent().stream()
+                .map(ProvidedService::getCategoryId)
+                .distinct()
+                .toList();
 
+        Map<String, ServiceCategory> categoryMap = serviceCategoryRepo.findAllById(categoryIds).stream()
+                .collect(Collectors.toMap(ServiceCategory::getId, category -> category));
+
+        return mapper.buildSearchDto(resultPage.getContent(), categoryMap, page, size, resultPage.getTotalElements());
+    }
 
     @Override
     public ProvidedServiceSearchDto searchServices(ProvidedServiceSearchFilterDto filter) {
@@ -48,39 +68,42 @@ public class ProvidedServiceServiceImpl implements ProvidedServiceService {
         int page = filter.getPage();
         int size = filter.getSize();
 
-        Aggregation aggregation;
         List<ProvidedService> services;
 
-        if (query == null || query.trim().isEmpty()) {
-            aggregation = Aggregation.newAggregation(
+        if (query == null || query.isBlank()) {
+            Aggregation aggregation = Aggregation.newAggregation(
                     Aggregation.skip((long) page * size),
                     Aggregation.limit(size)
             );
 
             AggregationResults<ProvidedService> results = mongoTemplate.aggregate(aggregation, "services", ProvidedService.class);
             services = results.getMappedResults();
-
-            long totalCount = providedServiceRepo.count();
-
-            return mapper.buildSearchDto(services, page, size, totalCount);
+        } else {
+            Aggregation aggregation = searchHelper.buildSearchAggregation(query, page, size);
+            services = mongoTemplate.aggregate(aggregation, "services", ProvidedService.class).getMappedResults();
         }
 
-        aggregation = searchHelper.buildSearchAggregation(query, page, size);
-        services = mongoTemplate.aggregate(aggregation, "services", ProvidedService.class).getMappedResults();
-
         Aggregation countAgg = searchHelper.buildCountAggregation(query);
-        long count = mongoTemplate.aggregate(countAgg, "services", CountDocument.class)
+        long totalCount = mongoTemplate.aggregate(countAgg, "services", CountDocument.class)
                 .getMappedResults()
                 .stream()
                 .findFirst()
                 .map(CountDocument::getTotal)
                 .orElse(0);
 
-        return mapper.buildSearchDto(services, page, size, count);
+        List<String> categoryIds = services.stream()
+                .map(ProvidedService::getCategoryId)
+                .distinct()
+                .toList();
+
+        Map<String, ServiceCategory> categoryMap = serviceCategoryRepo.findAllById(categoryIds).stream()
+                .collect(Collectors.toMap(ServiceCategory::getId, category -> category));
+
+        return mapper.buildSearchDto(services, categoryMap, page, size, totalCount);
     }
 
     @Override
-    public ProvidedServiceDto createService(CreateProvidedServiceRequest dto) {
+    public ProvidedServiceDto createService(CreateProvidedServiceDto dto) {
         String categoryId = dto.getCategoryId();
 
         if (!serviceCategoryRepo.existsById(categoryId)) {
@@ -88,6 +111,30 @@ public class ProvidedServiceServiceImpl implements ProvidedServiceService {
         }
 
         return mapper.entityToDto(providedServiceRepo.save(mapper.createDtoToEntity(dto)));
+    }
+
+    @Override
+    public ProvidedServiceDto applyPatch(ProvidedServiceDto existingDto, PatchProvidedServiceDto patchDto) {
+        Map<String, List<String>> errors = patchValidator.validate(patchDto);
+        if (!errors.isEmpty()) {
+            throw new MultiValidationException(errors);
+        }
+
+        if (patchDto.getCategoryId() != null &&
+                !serviceCategoryRepo.existsById(patchDto.getCategoryId())) {
+            throw new InvalidReferenceException("Invalid categoryId: " + patchDto.getCategoryId());
+        }
+
+        Patchers.patcherProvidedService(existingDto, patchDto);
+        ProvidedService updated = mapper.dtoToEntity(existingDto);
+        ProvidedService saved = providedServiceRepo.save(updated);
+
+        return mapper.entityToDto(saved);
+    }
+
+    @Override
+    public void deleteById(String id) {
+        providedServiceRepo.deleteById(id);
     }
 
     @Setter
